# agentropic-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: agent.rs  context.rs  error.rs  id.rs  identity.rs  lib.rs  lifecycle.rs  prelude.rs  result.rs
tests/: basic_agent.rs
