[package]
name = "Agentropic-core"
version = "0.1.0"
edition = "2024"
description = "Core abstractions for Agent-Oriented Programming in Rust"
license = "MIT"
repository = "https://github.com/agentropic/agentropic-core"

[dependencies]
async-trait = "0.1.89"
serde = {version = "1.0.228", features = ["derive]}
thiserror = "2.0.17"
uuid = {version = "1.19.0", features = ["v4]}

