[package]
name = "agentropic-core"
version = "0.1.0"
edition = "2021"
authors = ["Agentropic <agentropic@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Core primitives, traits, and abstractions for agent-oriented programming"
repository = "https://github.com/agentropic/agentropic-core"
documentation = "https://docs.rs/agentropic-core"
keywords = ["agents", "multi-agent", "aop", "autonomous"]
categories = ["concurrency", "simulation"]


[dependencies]
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"


[dev-dependencies]
tokio-test = "0.4"